<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginpic"
    tools:context=".loginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <ImageView
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/profile"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:background="#fff"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/bwn_login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffff"
            android:text="@string/not_register"/>
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/register"/>


    </LinearLayout>


</LinearLayout>